@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.star.gr" version="2.3.0" name="STAR Player" provider-name="Twilight0">
+<addon id="plugin.video.star.gr" version="2.3.1" name="STAR Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
-		<import addon="script.module.tulip" version="2.6.12" />
+		<import addon="script.module.tulip" version="2.6.13" />
 		<import addon="plugin.video.youtube" version="6.8.3"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
@@ -20,7 +20,11 @@
 		<source>https://github.com/Twilight0/plugin.video.star.gr</source>
 		<website>http://www.star.gr/</website>
 		<size>228454</size>
-		<news>[B]2.3.0[/B]
+		<news>[B]2.3.1[/B]
+- Fix for unicode characters in thumbnail paths
+- Fix into the resolver for some older videos
+
+[B]2.3.0[/B]
 - Minor fix for video thumbnails
 - Performance optimizations
 
